--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,1 +1,19 @@
 Django==1.10.5
+chardet==2.3.0
+django-crequest==2014.9.19
+django-graphos==0.3.3
+django-github-hook==0.2.0
+django-guardian==1.4.4
+django-crispy-forms==1.6.0
+django-queryset-csv==1.0.0
+django-tables2==1.2.6
+django-extra-views==0.8.0
+django-filter==0.14.0
+django-import-export==0.5.1
+django-select-multiple-field==0.4.2
+django-sendmail-backend==0.1.2
+django-widget-tweaks==1.4.1
+mysqlclient==1.3.7
+Pillow==3.3.0
+pyldap==2.4.25.1
+pytz==2016.7
